# Q-Learning

./: CMakeLists.txt  README.md  main.cpp
opencv/x86/vc15/lib/: OpenCVConfig.cmake  OpenCVModules-debug.cmake  OpenCVModules-release.cmake  opencv_calib3d2413.lib  opencv_contrib2413.lib  opencv_core2413.lib  opencv_features2d2413.lib  opencv_flann2413.lib  opencv_gpu2413.lib  opencv_highgui2413.lib  opencv_imgproc2413.lib  opencv_legacy2413.lib  opencv_ml2413.lib  opencv_nonfree2413.lib  opencv_objdetect2413.lib  opencv_ocl2413.lib  opencv_photo2413.lib  opencv_stitching2413.lib  opencv_superres2413.lib  opencv_video2413.lib  opencv_videostab2413.lib  opencv_world330.lib  opencv_world330d.lib
